force-app/main/default/objects/Provision__c/Provision__c.object-meta.xml
<CustomObject>
    <description>Created for Contract Management.</description>
    <label>Provision</label>
    <nameField>
        <displayFormat>PFN-{000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>