force-app/main/default/objects/Provision__c/fields/Accounting_Memo_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Memo_Requirement__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Accounting Memo Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>