force-app/main/default/objects/Provision__c/fields/Accounting_Treatment_Details__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Treatment_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Accounting Treatment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>