force-app/main/default/objects/Provision__c/fields/Accounting_Treatment_OMNI__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Treatment_OMNI__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Accounting Treatment (OMNI)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Accounting Impact</fullName>
            </value>
            <value>
                <fullName>See Accounting Treatment Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>