force-app/main/default/objects/Provision__c/fields/Add_On_Contract__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add On Contract?</label>
    <type>Checkbox</type>
</CustomField>