force-app/main/default/objects/Provision__c/fields/Amendment__c.field-meta.xml
<CustomField>
    <fullName>Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EULA Modified (amendment)?</label>
    <type>Checkbox</type>
</CustomField>