force-app/main/default/objects/Provision__c/fields/Annual_Fees_Billing_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fees_Billing_Done_By__c</fullName>
    <label>Annual Fees Billing Done By:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPSLT</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>