force-app/main/default/objects/Provision__c/fields/Application_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Application_Discounts__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Application Discounts</label>
    <type>TextArea</type>
</CustomField>