force-app/main/default/objects/Provision__c/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA&amp;D</fullName>
            </value>
            <value>
                <fullName>Additional Stored Positions</fullName>
            </value>
            <value>
                <fullName>Advanced Mapping Interface</fullName>
            </value>
            <value>
                <fullName>ALK CoPilot</fullName>
            </value>
            <value>
                <fullName>Amber Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Cross Street Location</fullName>
            </value>
            <value>
                <fullName>CSA Safety Performance</fullName>
            </value>
            <value>
                <fullName>Data Sharing</fullName>
            </value>
            <value>
                <fullName>Driver Email</fullName>
            </value>
            <value>
                <fullName>Driver Notification</fullName>
            </value>
            <value>
                <fullName>Driver Training</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>DTTS</fullName>
            </value>
            <value>
                <fullName>Exact Fuel</fullName>
            </value>
            <value>
                <fullName>Extended Productivity</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring Extended Faults</fullName>
            </value>
            <value>
                <fullName>Hard Braking</fullName>
            </value>
            <value>
                <fullName>Hours of Service Macro</fullName>
            </value>
            <value>
                <fullName>Hours of Service Mobile</fullName>
            </value>
            <value>
                <fullName>In-Cab Printing</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Machine Health Monitoring</fullName>
            </value>
            <value>
                <fullName>Media Manager Service</fullName>
            </value>
            <value>
                <fullName>NaviGo</fullName>
            </value>
            <value>
                <fullName>Panic Notification</fullName>
            </value>
            <value>
                <fullName>Per Diem Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>