force-app/main/default/objects/Provision__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All parties&apos; consent</fullName>
            </value>
            <value>
                <fullName>All parties with exception</fullName>
            </value>
            <value>
                <fullName>By OMNI&apos;s consent only</fullName>
            </value>
            <value>
                <fullName>Other party&apos;s consent only</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>