force-app/main/default/objects/Provision__c/fields/Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Notes__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Assignment Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>