force-app/main/default/objects/Provision__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAR (fill in details below)</fullName>
            </value>
            <value>
                <fullName>Customer (fill in details below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>