force-app/main/default/objects/Provision__c/fields/CAS_Clause__c.field-meta.xml
<CustomField>
    <fullName>CAS_Clause__c</fullName>
    <description>Created for Contract Management.</description>
    <label>CAS Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>52.230-2</fullName>
            </value>
            <value>
                <fullName>52.230-3</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>