force-app/main/default/objects/Provision__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>