force-app/main/default/objects/Provision__c/fields/Comments_Alternate_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Comments_Alternate_Payment_Schedule__c</fullName>
    <description>Accounting</description>
    <label>Comments / Alternate Payment Schedule</label>
    <type>TextArea</type>
</CustomField>