force-app/main/default/objects/Provision__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <label>Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>