force-app/main/default/objects/Provision__c/fields/Confidentiality_Details__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Details__c</fullName>
    <label>Confidentiality Details</label>
    <type>TextArea</type>
</CustomField>