force-app/main/default/objects/Provision__c/fields/Contains_52_222_54_E_Verify__c.field-meta.xml
<CustomField>
    <fullName>Contains_52_222_54_E_Verify__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Contains 52.222-54 E-Verify?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>