force-app/main/default/objects/Provision__c/fields/Contingency_Details__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Contingency Details</label>
    <type>TextArea</type>
</CustomField>