force-app/main/default/objects/Provision__c/fields/Contract_Grade__c.field-meta.xml
<CustomField>
    <fullName>Contract_Grade__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Contract Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>