force-app/main/default/objects/Provision__c/fields/Contract_Grade_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Grade_Notes__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Contract Grade Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>