force-app/main/default/objects/Provision__c/fields/Contract_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment_Terms__c</fullName>
    <label>Contract Payment Terms:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/3 Deposit; 1/3 w/Delivery; 1/3 net 30 days/Delivery</fullName>
                <default>true</default>
                <label>1/3 Deposit; 1/3 w/Delivery; 1/3 net 30 days/Delivery</label>
            </value>
            <value>
                <fullName>1/3 Deposit; extended payment terms (details below)</fullName>
            </value>
            <value>
                <fullName>1/3 Deposit; 2/3 payment after 90 day evaluation</fullName>
            </value>
            <value>
                <fullName>Other (fill in details below)</fullName>
            </value>
            <value>
                <fullName>Due upon delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>