force-app/main/default/objects/Provision__c/fields/Contract_Status_for_Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_for_Monthly_Report__c</fullName>
    <description>This is needed for J&apos;s monthly Board of Directors reports and is used in Informatica Cloud</description>
    <formula>TEXT(Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status for Monthly Report</label>
    <type>Text</type>
</CustomField>