force-app/main/default/objects/Provision__c/fields/Convenience_Clause__c.field-meta.xml
<CustomField>
    <fullName>Convenience_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, there is a convenience clause of 30 days on this contract.</inlineHelpText>
    <label>Convenience Clause</label>
    <type>Checkbox</type>
</CustomField>