force-app/main/default/objects/Provision__c/fields/Currency_of_EULA__c.field-meta.xml
<CustomField>
    <fullName>Currency_of_EULA__c</fullName>
    <label>Currency of EULA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD (USA)</fullName>
            </value>
            <value>
                <fullName>AUD (Australia)</fullName>
            </value>
            <value>
                <fullName>BRL (Brazil)</fullName>
            </value>
            <value>
                <fullName>BSF (Venezuela)</fullName>
            </value>
            <value>
                <fullName>CLP (Chile)</fullName>
            </value>
            <value>
                <fullName>CNY (China)</fullName>
            </value>
            <value>
                <fullName>EUR (Euro)</fullName>
            </value>
            <value>
                <fullName>GBP (UK)</fullName>
            </value>
            <value>
                <fullName>HKD (Hong Kong)</fullName>
            </value>
            <value>
                <fullName>IDR (Indonesia)</fullName>
            </value>
            <value>
                <fullName>ILS (Israel)</fullName>
            </value>
            <value>
                <fullName>KRW (South-Korean Won)</fullName>
            </value>
            <value>
                <fullName>MXN (Mexico)</fullName>
            </value>
            <value>
                <fullName>MYR (Malaysia)</fullName>
            </value>
            <value>
                <fullName>RUB (Russia)</fullName>
            </value>
            <value>
                <fullName>SGD (Singapore)</fullName>
            </value>
            <value>
                <fullName>THB (Thailand)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>