force-app/main/default/objects/Provision__c/fields/Customer_Limitation_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Customer_Limitation_of_Liability__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Counterparty Limitation of Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>