force-app/main/default/objects/Provision__c/fields/Customer_s_Assignability_Rights__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Assignability_Rights__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Counterparty&apos;s Assignability Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assign rights &amp; obligations in Customer discretion</fullName>
            </value>
            <value>
                <fullName>Assign rights &amp; obligations with OMNI consent</fullName>
            </value>
            <value>
                <fullName>No assignment of rights or obligations</fullName>
            </value>
            <value>
                <fullName>Both parties&apos; written consent</fullName>
            </value>
            <value>
                <fullName>Other party&apos;s written consent</fullName>
            </value>
            <value>
                <fullName>OMNI&apos;s written consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>