force-app/main/default/objects/Provision__c/fields/Data_Access__c.field-meta.xml
<CustomField>
    <fullName>Data_Access__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Data Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>John Deere</fullName>
            </value>
            <value>
                <fullName>John Deere and Dealers</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Vermeer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>