force-app/main/default/objects/Provision__c/fields/Data_Policy__c.field-meta.xml
<CustomField>
    <fullName>Data_Policy__c</fullName>
    <label>Data Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>Aggregate or Anonymous</fullName>
            </value>
            <value>
                <fullName>Aggregate and Anonymous</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>P.I.I. Removed</fullName>
                <default>true</default>
                <label>P.I.I. Removed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>