force-app/main/default/objects/Provision__c/fields/Date_of_Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Final_Payment__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Date of Final Payment</label>
    <type>Date</type>
</CustomField>