force-app/main/default/objects/Provision__c/fields/Date_of_Payment_3_to_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment_3_to_UPSLT__c</fullName>
    <inlineHelpText>Payment #3&apos;s USD due to RTI after the Total Software amount has been divided into the RTI and VAR portions and converted to USD using the exchange rate</inlineHelpText>
    <label>Payment #3 to RTI (#Days from DEL)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>