force-app/main/default/objects/Provision__c/fields/Date_of_Payment_4_to_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment_4_to_UPSLT__c</fullName>
    <inlineHelpText># of days from delivery or acceptance (e.g., upon delivery, 30 days after delivery, 60 days after acceptance, etc...)</inlineHelpText>
    <label>Payment #4 to RTI (# Days from DEL)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>