force-app/main/default/objects/Provision__c/fields/Date_of_VAR_Payment_to_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Date_of_VAR_Payment_to_UPSLT__c</fullName>
    <inlineHelpText>Payment #1&apos;s USD due to Roadnet after the Total Software amount has been divided into the Roadnet and VAR portions and converted to USD using the exchange rate</inlineHelpText>
    <label>Payment #1 to Roadnet (#Days from DEL)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>