force-app/main/default/objects/Provision__c/fields/DCs__c.field-meta.xml
<CustomField>
    <fullName>DCs__c</fullName>
    <label>DCs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>