force-app/main/default/objects/Provision__c/fields/DD882_Required__c.field-meta.xml
<CustomField>
    <fullName>DD882_Required__c</fullName>
    <description>Created for Contract Management.</description>
    <label>DD882 Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>