force-app/main/default/objects/Provision__c/fields/Depost_with_Schedule_1__c.field-meta.xml
<CustomField>
    <fullName>Depost_with_Schedule_1__c</fullName>
    <label>Depost with Schedule 1 ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>