force-app/main/default/objects/Provision__c/fields/Detailed_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Order_Status__c</fullName>
    <label>Detailed Order Status</label>
    <type>TextArea</type>
</CustomField>