force-app/main/default/objects/Provision__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Document Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>