force-app/main/default/objects/Provision__c/fields/DVIR_Fee_Schedule_3__c.field-meta.xml
<CustomField>
    <fullName>DVIR_Fee_Schedule_3__c</fullName>
    <label>DVIR Fee (Schedule 3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>