force-app/main/default/objects/Provision__c/fields/DVIR_Units__c.field-meta.xml
<CustomField>
    <fullName>DVIR_Units__c</fullName>
    <label>DVIR Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>