force-app/main/default/objects/Provision__c/fields/Eligible_for_Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Monthly_Report__c</fullName>
    <formula>IF(LEN(TEXT(Contract_Grade__c))= 1 &amp;&amp; OR(
Contract_Status_for_Monthly_Report__c = &quot;Active&quot;, 
Contract_Status_for_Monthly_Report__c = &quot;Activated&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Monthly Report</label>
    <type>Text</type>
</CustomField>