force-app/main/default/objects/Provision__c/fields/Email_for_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Primary_Contact__c</fullName>
    <label>Email For Primary Contact</label>
    <type>Email</type>
</CustomField>