force-app/main/default/objects/Provision__c/fields/Evaluation_Term__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Term__c</fullName>
    <label>Evaluation Term?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>180 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>