force-app/main/default/objects/Provision__c/fields/Ext_Terminal_Maintenance_Discount__c.field-meta.xml
<CustomField>
    <fullName>Ext_Terminal_Maintenance_Discount__c</fullName>
    <label>Ext. Terminal Maintenance Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>