force-app/main/default/objects/Provision__c/fields/Extended_Terminal_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Extended_Terminal_Maintenance__c</fullName>
    <label>Extended Terminal Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>