force-app/main/default/objects/Provision__c/fields/FAR_12_FAR_15__c.field-meta.xml
<CustomField>
    <fullName>FAR_12_FAR_15__c</fullName>
    <description>Created for Contract Management.</description>
    <label>FAR 12/FAR 15?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FAR 12</fullName>
                <default>true</default>
                <label>FAR 12</label>
            </value>
            <value>
                <fullName>FAR 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>