force-app/main/default/objects/Provision__c/fields/Fee_Start_Extension__c.field-meta.xml
<CustomField>
    <fullName>Fee_Start_Extension__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Fee Start Extension (in days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>