force-app/main/default/objects/Provision__c/fields/File_Destruction_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Destruction_Date__c</fullName>
    <description>Created for Contract Management.</description>
    <label>File Destruction Date</label>
    <type>Date</type>
</CustomField>