force-app/main/default/objects/Provision__c/fields/Final_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Received__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Final Payment Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>