force-app/main/default/objects/Provision__c/fields/Finance_Audit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Finance_Audit_Comments__c</fullName>
    <description>A field used to store comments about the irf which will be ported to the Order Fact Sheet.</description>
    <inlineHelpText>A field used to store comments about the irf which will be ported to the Order Fact Sheet.</inlineHelpText>
    <label>Finance Audit Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>