force-app/main/default/objects/Provision__c/fields/Free_Driver_Dispatcher_Training__c.field-meta.xml
<CustomField>
    <fullName>Free_Driver_Dispatcher_Training__c</fullName>
    <label>Free Driver / Dispatcher Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>