force-app/main/default/objects/Provision__c/fields/Free_Installation__c.field-meta.xml
<CustomField>
    <fullName>Free_Installation__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Free Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>