force-app/main/default/objects/Provision__c/fields/Free_Installation_Details__c.field-meta.xml
<CustomField>
    <fullName>Free_Installation_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Free Installation Details</label>
    <type>TextArea</type>
</CustomField>